# oscar-nominees

./: README.md  main.py  pyproject.toml
