[tool.poetry]
name = "oscar-nominees"
version = "0.1.0"
description = ""
authors = ["Athelia Crosmun <hi@athelia.codes>"]
readme = "README.md"
packages = [{include = "oscar_nominees"}]

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "^4.12.3"
requests = "^2.31.0"
black = {extras = ["d"], version = "^24.1.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
